--- a/app/src/main/res/xml/fragment_splashscreen_scene.xml
+++ b/app/src/main/res/xml/fragment_splashscreen_scene.xml
@@ -4,13 +4,20 @@
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_height="162dp"
+            android:layout_width="320dp"
             android:id="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="800dp" />
+            android:layout_marginTop="32dp"
+            app:layout_constraintHorizontal_bias="0.67"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            android:layout_marginStart="32dp"
+            app:layout_editor_absoluteY="537dp" />
         <Constraint
             android:id="@+id/tvSplash"
             android:layout_width="wrap_content"
@@ -24,15 +31,15 @@
     <ConstraintSet android:id="@+id/end" >
         <Constraint
             android:layout_marginEnd="32dp"
-            android:layout_height="wrap_content"
+            android:layout_height="223dp"
             android:layout_marginTop="32dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.432"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_width="wrap_content"
-            app:layout_constraintVertical_bias="0.178"
+            android:layout_width="259dp"
+            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp"
             android:id="@+id/imageView" />
@@ -46,7 +53,7 @@
             app:layout_constraintHorizontal_bias="0.432"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="wrap_content"
-            app:layout_constraintVertical_bias="0.267"
+            app:layout_constraintVertical_bias="0.166"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="32dp"
             android:id="@+id/tvSplash" />
