--- a/app/src/main/res/layout/fragment_batalha_third.xml
+++ b/app/src/main/res/layout/fragment_batalha_third.xml
@@ -5,24 +5,23 @@
     <data>
         <variable
             name="fragment"
-            type="br.iesb.mobile.rpg_pi2_20211.ui.fragment.batalha.BatalhaSecondFragment" />
+            type="br.iesb.mobile.rpg_pi2_20211.ui.fragment.batalha.BatalhaThirdFragment" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/frameLayout4"
+        android:id="@+id/frameLayout3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragment.batalha.BatalhaSecondFragment" >
+        tools:context=".ui.fragment.batalha.BatalhaFirstFragment" >
 
         <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="336dp"
-            android:layout_height="493dp"
-            android:src="@drawable/monstrosla"
+            android:id="@+id/imageView8"
+            android:layout_width="282dp"
+            android:layout_height="482dp"
+            android:src="@drawable/goblin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.488"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.708" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
