--- a/app/src/main/res/layout/fragment_splashscreen.xml
+++ b/app/src/main/res/layout/fragment_splashscreen.xml
@@ -35,12 +35,14 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
-            android:scaleType="center"
+            android:scaleType="centerInside"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/logosplash" />
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/paredemedieval1" />
 
         <TextView
             android:id="@+id/tvSplash"
