--- a/app/src/main/res/layout/fragment_batalha.xml
+++ b/app/src/main/res/layout/fragment_batalha.xml
@@ -28,7 +28,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="24dp"
                 android:scaleType="centerCrop"
-                android:onClick="@{() -> fragment.batalha(1)}"
+                android:onClick="@{() -> viewmodel.batalha(1)}"
                 android:src="@drawable/defender"
                 app:layout_constraintBottom_toTopOf="@+id/ibRun"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
                 android:layout_marginBottom="24dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/atack"
-                android:onClick="@{() -> fragment.batalha(2)}"
+                android:onClick="@{() -> viewmodel.batalha(2)}"
                 app:layout_constraintBottom_toTopOf="@+id/ibMagic"
                 app:layout_constraintEnd_toStartOf="@+id/ibDefender"
                 app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
                 android:layout_marginBottom="32dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/magic"
-                android:onClick="@{() -> fragment.batalha(3)}"
+                android:onClick="@{() -> viewmodel.batalha(3)}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/ibRun"
                 app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
                 android:layout_marginBottom="32dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/exit"
-                android:onClick="@{() -> fragment.batalha(4)}"
+                android:onClick="@{() -> viewmodel.batalha(4)}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/vpBatalha" />
