--- a/app/src/main/res/layout/fragment_personagem.xml
+++ b/app/src/main/res/layout/fragment_personagem.xml
@@ -70,7 +70,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:text="Magias"
+            android:text="Trocar Elemento"
+            android:onClick="@{fragmentPersonagem::PopUpTrocaEl}"
             app:layout_constraintBottom_toTopOf="@+id/btCharInv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
