--- a/app/src/main/res/layout/fragment_batalha_chefe.xml
+++ b/app/src/main/res/layout/fragment_batalha_chefe.xml
@@ -36,8 +36,7 @@
             android:layout_marginBottom="24dp"
             android:scaleType="centerCrop"
             android:src="@drawable/defender"
-            android:onClick="@{() -> fragment.batalhaChefe(2)}"
-
+            android:onClick="@{() -> viewmodel.batalhaChefe(2)}"
             app:layout_constraintBottom_toTopOf="@+id/ibRun"
             app:layout_constraintEnd_toEndOf="parent"
 
@@ -53,7 +52,7 @@
             android:layout_marginBottom="24dp"
             android:scaleType="centerCrop"
             android:src="@drawable/atack"
-            android:onClick="@{() -> fragment.batalhaChefe(1)}"
+            android:onClick="@{() -> viewmodel.batalhaChefe(1)}"
             app:layout_constraintBottom_toTopOf="@+id/ibMagic"
             app:layout_constraintEnd_toStartOf="@+id/ibDefender"
             app:layout_constraintStart_toStartOf="parent"
