--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_personagemFragment_to_mapFragment"
             app:destination="@id/mapFragment" />
+        <action
+            android:id="@+id/action_personagemFragment_to_itemFragment"
+            app:destination="@id/itemFragment" />
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
@@ -25,6 +28,9 @@
         <action
             android:id="@+id/action_homeFragment_to_chatBotFragment"
             app:destination="@id/chatBotFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_personagemFragment"
+            app:destination="@id/personagemFragment" />
     </fragment>
     <fragment
         android:id="@+id/criarPersonagemOnboarding"
@@ -73,4 +79,9 @@
         android:id="@+id/batalhaChefeFragment"
         android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.batalha.BatalhaChefeFragment"
         android:label="BatalhaChefeFragment" />
+    <fragment
+        android:id="@+id/itemFragment"
+        android:name="br.iesb.mobile.rpg_pi2_20211.ui.fragment.ItemFragment"
+        android:label="fragment_item_list"
+        tools:layout="@layout/fragment_item_list" />
 </navigation>
